# project02/routes/recipe.js
@@ -4,5 +4,6 @@ const router = express.Router();
 const recipeController = require('../controllers/recipe');
 
 router.get('/:recipeName', recipeController.getRecipe);
+router.delete('/:recipeName', recipeController.deleteRecipe);
 
 module.exports = router;
